--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <title>Prueba</title>
 </head>
 
@@ -135,156 +136,7 @@
 
     </footer>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap');
-
-        body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: "Montserrat", sans-serif;
-        }
-
-        header {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            height: 500px;
-            width: 100%;
-            background: url(./assets/paisaje.png);
-            background-position: top;
-            background-repeat: no-repeat;
-            background-size: cover;
-
-        }
-
-        header div:nth-child(2) {
-            display: flex;
-            flex-direction: row;
-        }
-
-        header div:nth-child(2) img {
-            width: 100%;
-            height: auto;
-            object-fit: contain;
-        }
-
-        section,
-        section+div {
-            max-width: 500px;
-            width: 100%;
-            padding: 40px;
-        }
-
-        h1 {
-            color: white;
-            font-weight: 200;
-            font-size: 42px;
-        }
-
-        header span {
-            color: white;
-            font-weight: 400;
-            font-size: larger;
-        }
-
-        main div:nth-child(1) {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #FFEAD0;
-            padding: 40px;
-        }
-
-        figure {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        figure img {
-            width: 50px;
-            height: auto
-        }
-
-        figure div.hr {
-            width: 40%;
-            height: 1.2px;
-            background-color: black;
-            border-radius: 50%;
-        }
-
-        figure p {
-            margin: 0;
-            width: 240px;
-            text-align: center;
-            font-size: 13px;
-        }
-
-        main div:nth-child(2) {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            padding: 40px;
-        }
-
-        main div:nth-child(2) ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        main div:nth-child(2) ul li {
-            width: 305px;
-            padding: 0;
-            list-style: none;
-        }
-        
-        main div:nth-child(2) img {
-            max-width: 300px;
-            width: 100%;
-            margin: 20px;
-            padding-right: 15px;
-        }
-
-        main div:nth-child(3):not(.hr) {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            height: 100px;
-            width: 100%;
-            gap: 15px;
-            background: url(./assets/paisaje.png);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        main div:nth-child(3) input {
-            padding-left: 10px;
-            width: 300px;
-        }
-
-        main div:nth-child(3) button {
-            width: fit-content;
-            padding: 2px 10px;
-            color: white;
-            background-color: #d97d5b;
-        }
-
-        main div:nth-child(3) input, button {
-            font-family: "Montserrat", sans-serif; 
-            height: 30px;
-            border-radius: 10px;
-            outline: 0;
-            border: 0;
-        }
-    </style>
+    
 
 </body>
 
